[package]
name = "sqlx-db-tester"
version = "0.1.0"
authors = ["brook <chenjy2005@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/brookchen/"
homepage = "https://github.com/brookchen/"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
sqlx = { version = "0.6.3", features = ["runtime-async-std-rustls", "postgres"] }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
futures-test = "0.3.28"
